--- a/index.html
+++ b/index.html
@@ -15,12 +15,19 @@
 <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase-database.js"></script>
 <script>
   // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyAq4VZqZ2yC5JLioLbdLRIJ2JPh0oW1r7w",
-    authDomain: "sabps-cd1b7.firebaseapp.com",
-    databaseURL: "https://sabps-cd1b7.firebaseio.com",
-    storageBucket: "sabps-cd1b7.appspot.com",
-    messagingSenderId: "881638063284"
+  // var config = {
+  //   apiKey: "AIzaSyAq4VZqZ2yC5JLioLbdLRIJ2JPh0oW1r7w",
+  //   authDomain: "sabps-cd1b7.firebaseapp.com",
+  //   databaseURL: "https://sabps-cd1b7.firebaseio.com",
+  //   storageBucket: "sabps-cd1b7.appspot.com",
+  //   messagingSenderId: "881638063284"
+  // };
+    var config = {
+	apiKey: "AIzaSyDI5gkDdas1zz45zhbP34xJ8_V8ZbawGag",
+    authDomain: "mazdis-sabps.firebaseapp.com",
+    databaseURL: "https://mazdis-sabps.firebaseio.com",
+    storageBucket: "mazdis-sabps.appspot.com",
+    messagingSenderId: "1068216834283"
   };
   firebase.initializeApp(config);
 </script>
